# packard

./: Cargo.toml  README.md  demo.tape  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml  test.yml
src/: config.rs  data.rs  main.rs  utils.rs
