[package]
name = "packard"
version = "0.0.1"
edition = "2021"
description = "A terminal based feed checker."
authors = ["Troy Lusty <hello@troylusty.com>"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
reqwest = "0.12.12"
rss = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
xdg = "2.5.2"
futures = "0.3.31"
indicatif = "0.17.9"
colored = "3.0.0"
terminal-link = "0.1.0"
emojis = "0.6.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true
panic = "abort"
