[package]
name = "packard"
version = "0.0.3"
edition = "2021"
description = "A terminal based feed checker."
authors = ["Troy Lusty <hello@troylusty.com>"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
reqwest = "0.12.12"
rss = "2.0.12"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
xdg = "2.5.2"
futures = "0.3.31"
indicatif = "0.17.11"
anyhow = "1.0.96"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true
panic = "abort"
